--- a/index.html
+++ b/index.html
@@ -29,6 +29,54 @@
         <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
       </div>
     </header>
+    <main>
+      <section class="section-about">
+        <div class="u-center-text u-margin-bottom-big">
+          <h2 class="heading-secondary">
+            EXCITING TOURS FOR ADEVENTUROUS PEOPLE
+          </h2>
+        </div>
+        <div class="row">
+          <div class="col-1-of-2">
+            <h3 class="heading-tertiary u-margin-bottom-small">
+              You are going to fall in love with nature
+            </h3>
+            <p class="paragraph">
+              ipsum dolor sit amet consectetur adipisicing elit. Quasi ad
+              accusamus error quidem cupiditate repudiandae. Lorem ipsum dolor
+              sit amet consectetur, adipisicing elit. Quaerat repellendus, neque
+              .
+            </p>
+            <h3 class="heading-tertiary u-margin-bottom-small">
+              Live adventures like you have never before
+            </h3>
+            <p class="paragraph">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam
+              id eaque veniam cum sunt accusamus
+            </p>
+            <a href="#" class="btn-text">Learn more &rarr;</a>
+          </div>
+
+          <div class="col-1-of-2">
+            <div class="composition">
+              <img
+                src="/img/nat-1-large.jpg"
+                alt="photo 1"
+                class="composition__photo composition__photo--p1"
+              /><img
+                src="/img/nat-2-large.jpg"
+                alt="photo 2"
+                class="composition__photo composition__photo--p2"
+              /><img
+                src="/img/nat-3-large.jpg"
+                alt="photo 3"
+                class="composition__photo composition__photo--p3"
+              />
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <!-- <section class="grid-test">
       <div class="row">
         <div class="col-1-of-2">Col 1 of 2</div>
@@ -61,4 +109,3 @@
     </section> -->
   </body>
 </html>
-3
